--- a/Server/package.json
+++ b/Server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "nodemon": "^2.0.22",
     "socket.io": "^4.7.1"
   }
